# toolgate

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
crates/toolgate-core/: Cargo.toml
crates/toolgate-core/src/: installer.rs  lib.rs  policy.rs  protocol.rs  redaction.rs  store.rs
crates/toolgate-daemon/: Cargo.toml
crates/toolgate-daemon/src/: main.rs
crates/toolgate-daemon/tests/: integration_smoke.rs
crates/toolgate-hook/: Cargo.toml
crates/toolgate-hook/src/: main.rs
docs/: ARCHITECTURE.md  CAPABILITY_MATRIX.md  IPC_PROTOCOL.md  THREAT_MODEL.md
