[package]
name = "toolgate-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
[dependencies]
anyhow.workspace = true
serde_json.workspace = true
tokio.workspace = true
toolgate-core = { path = "../toolgate-core" }

[dev-dependencies]
tempfile.workspace = true
